--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node -r esm index.js",
-    "dev:watch": "nodemon -r esm index.js"
+    "dev:watch": "nodemon -r esm index.js --ignore db.json"
   },
   "author": "J. Kamphausen",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
-    "esm": "^3.2.25"
+    "esm": "^3.2.25",
+    "express": "^4.17.1",
+    "lowdb": "^1.0.0",
+    "node-cron": "^2.0.3"
   }
 }
